--- a/real_estate_price_part1.ipynb
+++ b/real_estate_price_part1.ipynb
@@ -4779,7 +4779,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "На этот шаг нам пришлось вернуться после получения первых результатов моделирования. Очевидно, что стоимость определяется перемножением площади объекта на его цену за единицу площади. По существу, цена является альтернативной целевой переменной. Мы не можем взять ее как предиктор."
+    "На этот шаг нам пришлось вернуться после получения первых результатов моделирования. Очевидно, что стоимость определяется перемножением площади объекта на цену за единицу площади. При этом площадь всегда известна до оценки, а цена вычисляется в процессе оценки. По существу, цена является альтернативной целевой переменной. Мы могли бы оставить этот признак для заполнения пустых значений в sqft, но в этом случае возникла бы утечка данных, по причине указанной выше - и цена и стоимость не известны до выполнения оценки. В дальнейших расчетах не будем использовать price_sqft (не включаем префикс 'new_')"
    ]
   },
   {
